platform_apps/kube-prometheus-stack/metrics-app/client.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrics-client
  template:
    metadata:
      labels:
        app: metrics-client
    spec:
      containers:
      - name: client
        image: rockman88v/metrics-client:latest
